k8s/apps/komga/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/gotson/komga:1.28.0@sha256:19764751d501495b021530c9426f25d8f9f8748dc38ab3ba48eb62d7df2cd92e
          ports:
            - containerPort: 25600
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
      volumes:
        - name: config
          hostPath:
            path: /mnt/local/komga/config
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /mnt/pool/books
            type: Directory
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
