k8s/apps/komga/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`komga.starry.blue`)
      services:
        - name: service
          port: service
